# BuffMod

./: .gitignore  package-lock.json  package.json  tailwind.config.js  tmp.json  vite.config.ts
src/: App.tsx  Navigation.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: create_tables.sql
src-tauri/src/: auth.rs  db_api.rs  handlers.rs  main.rs  secure_db_access.rs  storage.rs  supabase.rs
src/app/auth/create-organisation/: page.tsx
src/app/auth/invite-login/: input-otp-invite-link.tsx  page.tsx
src/app/auth/login/: page.tsx
src/app/auth/welcome/: page.tsx
src/app/dashboard/: page.tsx
src/app/dashboard/modules/clients/: clients-details.tsx  clients-header.tsx  clients-main.tsx  clients-new-client.tsx  clients-table.tsx
src/app/dashboard/modules/financials/: financials-main.tsx
src/app/dashboard/modules/permissions/: permissions-main.tsx
src/app/dashboard/modules/settings/: settings-main.tsx
src/app/dashboard/modules/social-media/: social-media-header.tsx  social-media-main.tsx  social-media-new-post.tsx
src/app/login/: page.tsx
src/components/: app-sidebar.tsx  login-form.tsx  nav-main.tsx  nav-user.tsx
src/components/ui/: calendar-days.tsx  calendar-event.tsx  calendar-events.tsx  calendar.tsx  day-time-picker.tsx  schedule.tsx
src/lib/: auth.ts  types.ts
